--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<aspectj.version>1.7.4</aspectj.version>
 	</properties>
 
-	
+
 
 	<dependencies>
 		<dependency>
@@ -119,6 +119,11 @@
 			<version>4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>6.1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
